force-app/main/default/objects/Target_Config__c/Target_Config__c.object-meta.xml
<CustomObject>
    <label>Target Config</label>
    <nameField>
        <displayFormat>TC-{00000}</displayFormat>
        <label>TC Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Target Configs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>