force-app/main/default/objects/Target_Config__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Unit</label>
    <referenceTo>Business_Unit__c</referenceTo>
    <relationshipLabel>Target Configs</relationshipLabel>
    <relationshipName>BU_Target_Configs</relationshipName>
    <type>Lookup</type>
</CustomField>