force-app/main/default/objects/Target_Config__c/fields/Current_FY__c.field-meta.xml
<CustomField>
    <fullName>Current_FY__c</fullName>
    <formula>IF(
TEXT(Financial_Year__c) = Current_Year__c,
TEXT(Financial_Year__c), 
&apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current FY</label>
    <type>Text</type>
</CustomField>