force-app/main/default/objects/Target_Config__c/fields/Current_Year__c.field-meta.xml
<CustomField>
    <fullName>Current_Year__c</fullName>
    <formula>&apos;FY-&apos; + RIGHT(TEXT(YEAR(TODAY()) + 1), 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Year</label>
    <type>Text</type>
</CustomField>