force-app/main/default/objects/Target_Config__c/fields/Financial_Year__c.field-meta.xml
<CustomField>
    <fullName>Financial_Year__c</fullName>
    <label>Financial Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Financial_Year</valueSetName>
    </valueSet>
</CustomField>