force-app/main/default/objects/Target_Config__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <formula>BDM__r.FirstName +&quot; &quot; +  BDM__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager</label>
    <type>Text</type>
</CustomField>