force-app/main/default/objects/Target_Config__c/fields/Overall_Actuals__c.field-meta.xml
<CustomField>
    <fullName>Overall_Actuals__c</fullName>
    <label>Overall Actuals</label>
    <summarizedField>SPM_Stats__c.Actual_Amount__c</summarizedField>
    <summaryForeignKey>SPM_Stats__c.Target_Config__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>