force-app/main/default/objects/Target_Config__c/fields/Sub_Channel__c.field-meta.xml
<CustomField>
    <fullName>Sub_Channel__c</fullName>
    <label>Sub-Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sub_Channel</valueSetName>
    </valueSet>
</CustomField>