force-app/main/default/objects/Target_Config__c/fields/Variance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Variance_Amount__c</fullName>
    <formula>Target__c - Overall_Actuals__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>