force-app/main/default/objects/Target_Config__c/fields/Year_Stats__c.field-meta.xml
<CustomField>
    <fullName>Year_Stats__c</fullName>
    <label>Year Stats</label>
    <referenceTo>Year_Stats__c</referenceTo>
    <relationshipLabel>Target Configs</relationshipLabel>
    <relationshipName>Target_Configs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>