force-app/main/default/objects/Target_Config__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Financial_Year__c</columns>
    <columns>BDD__c</columns>
    <columns>BDM__c</columns>
    <columns>Level__c</columns>
    <columns>Account__c</columns>
    <columns>Business_Unit__c</columns>
    <columns>Month__c</columns>
    <columns>Product__c</columns>
    <columns>Target__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>